--- a/css/style.css
+++ b/css/style.css
@@ -633,7 +633,7 @@ img {
 }
 
 .prev-header-slider {
-	background-image: url(/img/arrow.png);
+	background-image: url(../img/arrow.png);
 	height: 6.0rem;
 	width: 6.0rem;
 	position: absolute;
@@ -644,7 +644,7 @@ img {
 }
 
 .next-header-slider {
-	background-image: url(/img/arrow.png);
+	background-image: url(../img/arrow.png);
 	height: 6.0rem;
 	width: 6.0rem;
 	position: absolute;
@@ -656,12 +656,12 @@ img {
 }
 
 .prev-header-slider:hover {
-	background-image: url(/img/active-arrow.png);
+	background-image: url(../img/active-arrow.png);
 	transform: rotate(180deg);
 }
 
 .next-header-slider:hover {
-	background-image: url(/img/active-arrow.png);
+	background-image: url(../img/active-arrow.png);
 	transform: rotate(360deg);
 }
 
